<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/feedsFragment"
        android:icon="@drawable/ic_round_fiber_new_black_24dp"
        android:title="@string/menu_title_feeds" />

    <item
        android:id="@+id/watchlistFragment"
        android:icon="@drawable/ic_round_library_books_black_24dp"
        android:title="@string/menu_title_watchlist" />

    <item
        android:id="@+id/browseCollectionsFragment"
        android:icon="@drawable/ic_round_search_black_24dp"
        android:title="@string/menu_title_browse" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_round_settings_black_24dp"
        android:title="@string/menu_title_settings" />

</menu>
