<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/feedsFragment">

    <fragment
        android:id="@+id/feedsFragment"
        android:name="reactivecircus.releaseprobe.feeds.FeedsFragment"
        android:label="@string/title_feeds"
        tools:layout="@layout/fragment_feeds" />

    <fragment
        android:id="@+id/watchlistFragment"
        android:name="reactivecircus.releaseprobe.watchlist.WatchlistFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/browseCollectionsFragment"
        android:name="reactivecircus.releaseprobe.browsecollections.BrowseCollectionsFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse_collections" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="reactivecircus.releaseprobe.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
